--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
+    <h1 id="score-player1">0</h1>
+    <h1 id="score-player2">0</h1>
     <script src="script.js"></script>
 </body>
 </html>
