--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <canvas id="canvas"></canvas>
     <h1 id="score-player1">0</h1>
     <h1 id="score-player2">0</h1>
+    <div id="h">
+        
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
