style: beautified the UI
Heart icons now are functioning, shows how many chances are user left with. Added welcome-page and gameover-page.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <title>Ping Pong Game</title>
 </head>
 <body>
+    
     <canvas id="canvas"></canvas>
     <h1 id="score-player1">0</h1>
     <h1 id="score-player2">0</h1>
+    <p id="computer">Computer</p>
+    <p id="player">You</p>
     <div id="h">
         
     </div>
