update: added a image and text animation

--- a/welcome.html
+++ b/welcome.html
@@ -8,21 +8,18 @@
     <title>Welcome</title>
 </head>
 <body>
-    <!-- <div id="label-input">
-        <label for="user-name">Enter your name : 
-            <input id="user-name" type="text" placeholder="Your name?">
-        </label>
-    </div> -->
     
+    <img id="my-img" src="bounce ball.jpg" width="800" height="500" >
+
+    <p id="text">Use left arrow key (<) and right arrow key (>) to move paddle left and right respectively.</p>
+
     <div id="playButton">
         <a href="index.html">
-            <button id="btn">Play</button>
+            <button id="btn">Play game</button>
         </a>
     </div>
 
-
-    <script src="script.js"></script>
-    <!-- <script src="welcome.js"></script> -->
+    <script src="welcome.js"></script>
     
 </body>
 </html>
