--- a/gameover.html
+++ b/gameover.html
@@ -11,7 +11,7 @@
     <div id="game-over">
         <h1>Game Over</h1>
     </div>
-    <a href="welcome.html"><button id="btn">Play again</button></a>
+    <a href="index.html"><button id="btn">Play again</button></a>
     <script src="gameover.js"></script>
 </body>
 </html>
