style: beautified the button
beautified the button. Also changed the name of some files to relevant names

--- a/gameover.html
+++ b/gameover.html
@@ -11,7 +11,7 @@
     <div id="game-over">
         <h1>Game Over</h1>
     </div>
-    <a href="index.html"><button id="btn">Play again</button></a>
-    <script src="gameover.js"></script>
+    <a href="index.html"><button class="btn">Play again</button></a>
+    <script src="indexGameOver.js"></script>
 </body>
 </html>
