--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <p id="text">Use left arrow key (<) and right arrow key (>) to move paddle left and right respectively.</p>
 
     <div id="playButton">
-        <a href="playGame.html">
-            <button id="btn">Play game</button>
+        <a href="pingPong.html">
+            <button class="btn">Play game</button>
         </a>
     </div>
 
-    <script src="index.js"></script>
+    <script src="indexGameOver.js"></script>
     
 </body>
 </html>
