--- a/pingPong.html
+++ b/pingPong.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="pingPong.css">
     <title>Ping Pong Game</title>
 </head>
 <body>
@@ -17,6 +17,6 @@
     <div id="h">
         
     </div>
-    <script src="script.js"></script>
+    <script src="pingPong.js"></script>
 </body>
 </html>
