--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
     <p id="text">Use left arrow key (<) and right arrow key (>) to move paddle left and right respectively.</p>
 
     <div id="playButton">
-        <a href="pingPong.html">
-            <button class="btn">Play game</button>
-        </a>
+        <button id="btn-play-game" class="btn">Play game</button>
     </div>
 
-    <script src="indexGameOver.js"></script>
+    <script src="index.js"></script>
     
 </body>
 </html>
