--- a/gameover.html
+++ b/gameover.html
@@ -11,7 +11,9 @@
     <div id="game-over">
         <h1>Game Over</h1>
     </div>
-    <a href="index.html"><button class="btn">Play again</button></a>
-    <script src="indexGameOver.js"></script>
+
+    <button id="btn-play-again" class="btn">Play again</button>
+
+    <script src="gameOver.js"></script>
 </body>
 </html>
